[package]
name = "cs453-project"
version = "0.1.0"
authors = ["kms040411 <kms040411@kaist.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.30", features = ["extra-traits", "full", "parsing"] }
quote = "1.0"
serde_json = "1.0"
serde = { version = "1.0.111", features = ["derive"]}
rand = "0.7.3"
proc-macro2 = { version = "1.0.18", features = ["span-locations"]}